# uk-climate-insurance-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
docs/: architecture.md  consumer_duty.md  data_sources.md  decisions.md  findings.md  methodology.md  model_card.md  phase_gates.md  project_overview.md  scraping_ethics.md  skills_log.md
notebooks/exploration/: README.md
scripts/: fetch_bgs_spm.py  fetch_ea_flood_zones.py  fetch_nrw_flood_zones.py  fetch_onspd.py  geojson_to_ndjson.py  verify_flood_postcodes.py
src/climate_insurance/: __init__.py  config.py
src/climate_insurance/api/: __init__.py
src/climate_insurance/data/: __init__.py  bgs_soil_parent_material.py  ea_flood_zones.py  loaders.py  nrw_flood_zones.py  postcode_directory.py  sources.py
src/climate_insurance/fairness/: __init__.py
src/climate_insurance/hazards/: __init__.py  composite.py  flood.py  lookup.py  postcode.py  subsidence.py  types.py
src/climate_insurance/models/: __init__.py
tests/: test_composite.py  test_flood.py  test_hazard_properties.py  test_nrw_flood.py  test_postcode.py  test_postcode_directory.py  test_smoke.py  test_subsidence.py
