[project]
name = "climate-insurance"
version = "0.1.0"
description = "UK Climate-Adjusted Home Insurance Risk Engine — postcode-level climate hazard exposure, premium projections, and Consumer Duty fairness lens."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Climate Insurance Engine contributor" }]
keywords = ["insurance", "climate", "actuarial", "uk", "pricing", "geospatial", "fairness"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.2",
    "polars>=1.0",
    "duckdb>=1.0",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "lightgbm>=4.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "shap>=0.45",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "folium>=0.16",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.13",
    "pre-commit>=3.7",
    "jupyter>=1.0",
    "playwright>=1.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/climate_insurance"]

[tool.uv]
package = true

# ----------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "--cov=climate_insurance",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=70",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: tests that take more than a few seconds",
    "integration: tests that hit external systems",
]

[tool.coverage.run]
branch = true
source = ["src/climate_insurance"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true

# ----------------------------------------------------------------------
# ruff
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks", "data", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length handled by black
    "N803",  # capitalised arg names ok (X, y matrices)
    "N806",  # capitalised local vars ok
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----------------------------------------------------------------------
# black
# ----------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
/(
    notebooks
  | data
  | \.venv
)/
'''

# ----------------------------------------------------------------------
# mypy — strict in src/, lenient in tests/ and notebooks/
# ----------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
exclude = ["notebooks/", "data/"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "climate_insurance.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "notebooks.*"
ignore_errors = true

# Geospatial and ML libraries publish patchy or no type stubs as of 2026-04
[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "shapely.*",
    "pyproj.*",
    "rasterio.*",
    "lightgbm.*",
    "shap.*",
    "folium.*",
    "plotly.*",
    "duckdb.*",
    "statsmodels.*",
    "polars.*",
    "matplotlib.*",
    "sklearn.*",
]
ignore_missing_imports = true
